--- a/core/templates/core/home_page.html
+++ b/core/templates/core/home_page.html
@@ -3,7 +3,7 @@
 <!-- INICIA EL POST-HEADER -->
 <div class="container">
     <div class="row">
-        <div class="col-12 col-md-4"><h2>Bienvenido!</h2></div>
+        <div class="col-12 col-md-4"><h2> <br>Bienvenido!</br></h2></div>
         <div class="col-12 col-md-4"><button class="btn main-btn">Inicia Sesion</button></div>
         <div class="col-12 col-md-4"><button class="btn main-btn">Ver lista de servicios</button></div>
     </div>
