--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -6,14 +6,27 @@
     <meta charset="UTF-8">
     <title>Document</title>
     
+    
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style_home_page.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="shortcut icon" href="{% static 'img/owl.svg' %}"/> 
+     
+    
+    <!-- Compiled and minified Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+    <!-- Minified JS library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Compiled and minified Bootstrap JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
+
+    
+    <link rel="stylesheet" href="{% static 'css/style_home_page.css' %}">
+  
+   
+    
 </head>
 
 <body>
-
     <!-- -->
     <!-- INICIA EL HEADER -->
     <div class="row" >
@@ -27,7 +40,7 @@
     {% endblock %}
     <!-- INICIA EL FOOTER -->
     <footer class="fixed-bottom footer">
-        <p>Aqui estaria el footer</p>
+        <p>Si se puede equipooo!!</p>
         
     </footer>
      <!-- TERMINA EL FOOTER  -->
