--- a/core/templates/core/home_page.html
+++ b/core/templates/core/home_page.html
@@ -3,16 +3,45 @@
 <!-- INICIA EL POST-HEADER -->
 <div class="container">
     <div class="row">
-        <div class="col-12 col-md-4"><h2> <br>Bienvenido!</br></h2></div>
-        <div class="col-12 col-md-4"><button class="btn main-btn">Inicia Sesion</button></div>
-        <div class="col-12 col-md-4"><button class="btn main-btn">Ver lista de servicios</button></div>
+        <div class="col-12 col-md-4"><h2> <b></b>Bienvenido!</b></h2></div>
+        <div class="col-12 col-md-4"><br><button class="btn main-btn">Inicia Sesion</button></br></div>
+        <div class="col-12 col-md-4"><br><button class="btn main-btn">Ver lista de servicios</button></br></div>
     </div>
 </div>
 <!-- TERMINA EL POST-HEADER  -->
 
 <!-- INICIA EL CARROUSEL -->
-<div class="carrousel ">
-    <p>Aqui estaria el carrousel</p>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+        <div class="item active">
+            <iframe src="https://drive.google.com/file/d/1xZYJLMxCuQbrbTq9RtP_MXWuOBML5roQ/preview"></iframe>
+        </div>
+        <div class="item">
+            <iframe src="https://drive.google.com/file/d/1EWgHH0_XBOCI7b44LBSd-fx3ursRxUkS/preview"></iframe>
+        </div>
+        <div class="item">
+            <iframe src="https://drive.google.com/file/d/10cRaHEoSsCpMLX-G5d28g3dQb6QqEgUa/preview"></iframe>
+        </div>
+    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
+
 <!-- TERMINA EL CARROUSEL  -->
 {% endblock %}
