El carrousel esta mejorado

--- a/core/static/css/style_home_page.css
+++ b/core/static/css/style_home_page.css
@@ -30,9 +30,9 @@ h1{
     font-weight: bold;
     color: #FFCD00;
 }
-iframe { 
+.img-car{
     width: 640px; 
     height: 480px; 
     margin:  auto; 
     display: block; 
-    } 
+}
