--- a/core/templates/core/home_page.html
+++ b/core/templates/core/home_page.html
@@ -8,8 +8,8 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-md-4"><h2> <b></b>Bienvenido!</b></h2></div>
-        <div class="col-12 col-md-4"><br><button class="btn main-btn">Inicia Sesion</button></br></div>
-        <div class="col-12 col-md-4"><br><button class="btn main-btn">Ver lista de servicios</button></br></div>
+        <div class="col-12 col-md-4"><br><a href=""><button class="btn main-btn">Inicia Sesion</button></a></br></div>
+        <div class="col-12 col-md-4"><br><a href="{% url 'lista_campus' %}"><button class="btn main-btn">Ver lista de servicios</button></a></br></div>
     </div>
 </div>
 <!-- TERMINA EL POST-HEADER  -->
